@@ -1,4 +1,4 @@
-# Copyright (C) 2005 by Canonical Ltd
+# Copyright (C) 2005, 2006 by Canonical Ltd
 # -*- coding: utf-8 -*-
 
 # This program is free software; you can redistribute it and/or modify
@@ -28,6 +28,7 @@ from bzrlib.tests import TestCaseInTempDir, BzrTestBase
 
 def test_suite():
     testmod_names = [
+                     'bzrlib.tests.blackbox.test_added',
                      'bzrlib.tests.blackbox.test_cat',
                      'bzrlib.tests.blackbox.test_export',
                      'bzrlib.tests.blackbox.test_missing',
