@@ -160,6 +160,8 @@ bzr 0.7
     * Remove Makefile.in from default ignore list.  (#6413, Tollef Fog 
       Heen, Martin Pool)
 
+    * Fix failure in 'bzr added'.  (Nathan McCallum, Martin Pool)
+
   TESTING:
 
     * Fix selftest asking for passwords when there are no SFTP keys.  
